order/deployment/istio/order.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloud-native-go-order
  namespace: cloud-native-go
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "order.cng.me"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloud-native-go-order
  namespace: cloud-native-go
spec:
  hosts:
    - "order.cng.me"
  gateways:
    - cloud-native-go-order
  http:
    - match:
        - uri:
            prefix: /v1/cng/
      rewrite:
        uri: /
      route:
        - destination:
            host: cloud-native-go-order
            subset: v1
            port:
              number: 80
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cloud-native-go-order
  namespace: cloud-native-go
spec:
  host: cloud-native-go-order
  subsets:
    - name: v1
      labels:
        version: v1
